--- a/ManageSYS/web.config
+++ b/ManageSYS/web.config
@@ -10,13 +10,15 @@
 	</connectionStrings>
   
   <appSettings>
-		<add key="ConnectionString" value="Data Source=(DESCRIPTION=(ADDRESS_LIST=(ADDRESS=(PROTOCOL=TCP)(HOST=(local))(PORT=1521)))(CONNECT_DATA=(SERVER=DEDICATED)(SERVICE_NAME=ORCL)));User Id=zs18;Password=zs18; "/>
+    <add key="DbOperator" value="MSYS.DAL,MSYS.DAL.OracleOperator" />
+    <!-- <add key="ConnectionString" value="Data Source=(DESCRIPTION=(ADDRESS_LIST=(ADDRESS=(PROTOCOL=TCP)(HOST=(local))(PORT=1521)))(CONNECT_DATA=(SERVER=DEDICATED)(SERVICE_NAME=ORCL)));User Id=zs18;Password=zs18; "/> -->
 	</appSettings>
 	<system.web>
 		<compilation debug="true" targetFramework="4.0">
 			<assemblies>
 				<add assembly="System.Data.OracleClient, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089"/>
 				<add assembly="ADODB, Version=7.0.3300.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A"/>
-				<add assembly="Microsoft.JScript, Version=10.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A"/></assemblies></compilation>
+				<add assembly="Microsoft.JScript, Version=10.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A"/></assemblies>
+    </compilation>
 	</system.web>
 </configuration>
