GridView奇偶行背景不同，统一管理0/1分类，在数据库表中进行维护

--- a/ManageSYS/web.config
+++ b/ManageSYS/web.config
@@ -20,8 +20,7 @@
 				<add assembly="ADODB, Version=7.0.3300.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A"/>
 				<add assembly="Microsoft.JScript, Version=10.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A"/></assemblies>
     </compilation>
-    <customErrors  mode="On" defaultRedirect="/Authority/404Error.html">
-      <error statusCode="404" redirect="/Authority/404Error.html"/>
+    <customErrors  mode="Off" >    
     </customErrors>
 	</system.web>
 </configuration>
