增加了表空间使用率的图表

--- a/ManageSYS/web.config
+++ b/ManageSYS/web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
 	<connectionStrings>
-		<add name="OracleConnectionString" connectionString="Data Source=ORCL;User ID=zs18;Password=zs18;Unicode=True" providerName="System.Data.OracleClient"/>
+		<add name="OracleConnectionString" connectionString="Data Source=ORCL;User ID=ZS18;Password=zs18;Unicode=True" providerName="System.Data.OracleClient"/>
     <add name="OledbConnectionString" connectionString="Provider=IhOLEDB.iHistorian.1;Data Source=10.50.212.71;User ID=administrator;Password = CHANGkong18;" providerName="System.Data.OleDb"/>
 	</connectionStrings>
   
