--- a/ManageSYS/web.config
+++ b/ManageSYS/web.config
@@ -6,7 +6,7 @@
 <configuration>
 	<connectionStrings>
 		<add name="OracleConnectionString" connectionString="Data Source=ORCL;User ID=zs18;Password=zs18;Unicode=True" providerName="System.Data.OracleClient"/>
-    <add name="OledbConnectionString" connectionString="Provider=IhOLEDB.iHistorian.1;Data Source=10.50.212.71;User ID=administrator;Password = CHANGkong18;" providerName="System.Data.OleDb"/>
+    <add name="OledbConnectionString" connectionString="Provider=IhOLEDB.iHistorian.1;Data Source=10.43.178.13;Persist Security Info=True;User ID=administrator;Password = admin@12345;" providerName="System.Data.OleDb"/>
 	</connectionStrings>
   
   <appSettings>
