完善报表功能，新增生产手动数据录入

--- a/ManageSYS/web.config
+++ b/ManageSYS/web.config
@@ -4,25 +4,24 @@
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
-	<connectionStrings>
-		<add name="OracleConnectionString" connectionString="Data Source=ORCL;User ID=zs18;Password=zs18;Unicode=True" providerName="System.Data.OracleClient"/>
+  <connectionStrings>
+    <add name="OracleConnectionString" connectionString="Data Source=ORCL;User ID=zs18;Password=zs18;Unicode=True" providerName="System.Data.OracleClient"/>
     <add name="OledbConnectionString" connectionString="Provider=IhOLEDB.iHistorian.1;Data Source=10.43.178.13;Persist Security Info=True;User ID=administrator;Password = admin@12345;" providerName="System.Data.OleDb"/>
-	</connectionStrings>
-  
+  </connectionStrings>
   <appSettings>
-    <add key="DbOperator" value="MSYS.DAL,MSYS.DAL.OracleOperator" />
+    <add key="DbOperator" value="MSYS.DAL,MSYS.DAL.OracleOperator"/>
     <!-- <add key="ConnectionString" value="Data Source=(DESCRIPTION=(ADDRESS_LIST=(ADDRESS=(PROTOCOL=TCP)(HOST=(local))(PORT=1521)))(CONNECT_DATA=(SERVER=DEDICATED)(SERVICE_NAME=ORCL)));User Id=zs18;Password=zs18; "/> -->
-	</appSettings>
-	<system.web>
-		<compilation debug="true" targetFramework="4.0">
-			<assemblies>
-				<add assembly="System.Data.OracleClient, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089"/>
-				<add assembly="ADODB, Version=7.0.3300.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A"/>
-				<add assembly="Microsoft.JScript, Version=10.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A"/></assemblies>
+  </appSettings>
+  <system.web>
+    <compilation debug="true" targetFramework="4.0">
+      <assemblies>
+        <add assembly="System.Data.OracleClient, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089"/>
+        <add assembly="ADODB, Version=7.0.3300.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A"/>
+        <add assembly="Microsoft.JScript, Version=10.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A"/>
+      </assemblies>
     </compilation>
-    <customErrors  mode="Off" >    
-    </customErrors>
- <!--   <machineKey validation="3DES" validationKey="319B474B1D2B7A87C996B280450BB36506A95AEDF9B51211"
+    <customErrors mode="Off"/>
+    <!--   <machineKey validation="3DES" validationKey="319B474B1D2B7A87C996B280450BB36506A95AEDF9B51211"
 decryptionKey="280450BB36319B474C996B506A95AEDF9B51211B1D2B7A87" decryption="3DES"/> -->
     <pages enableEventValidation="false" viewStateEncryptionMode="Never" enableViewStateMac="false"/>
   </system.web>
