--- a/DataCollector/App.config
+++ b/DataCollector/App.config
@@ -1,15 +1,15 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0"?>
 <configuration>
     <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
     </startup>
   <connectionStrings>
-    <add name="OracleConnectionString" connectionString="Data Source=ORCL;User ID=zs18;Password=zs18;Unicode=True" providerName="System.Data.OracleClient"/>
-    <add name="OledbConnectionString" connectionString="Provider=IhOLEDB.iHistorian.1;Data Source=10.43.178.13;Persist Security Info=True;User ID=administrator;Password = admin@12345;" providerName="System.Data.OleDb"/>
+    <add name="OracleConnectionString" connectionString="Data Source=ORCL;User ID=zs18;Password=ZS18;Unicode=True" providerName="System.Data.OracleClient"/>
+    <add name="OledbConnectionString" connectionString="Provider=IhOLEDB.iHistorian.1;Data Source=192.168.18.3;Persist Security Info=True;User ID=administrator;Password = admin@12345;" providerName="System.Data.OleDb"/>
   </connectionStrings>
 
   <appSettings>
-    <add key="DbOperator" value="MSYS.DAL,MSYS.DAL.OracleOperator" />
+    <add key="DbOperator" value="MSYS.DAL,MSYS.DAL.OracleOperator"/>
     <!-- <add key="ConnectionString" value="Data Source=(DESCRIPTION=(ADDRESS_LIST=(ADDRESS=(PROTOCOL=TCP)(HOST=(local))(PORT=1521)))(CONNECT_DATA=(SERVER=DEDICATED)(SERVICE_NAME=ORCL)));User Id=zs18;Password=zs18; "/> -->
   </appSettings>
 </configuration>
