--- a/DataCollector/App.config
+++ b/DataCollector/App.config
@@ -4,7 +4,7 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
     </startup>
   <connectionStrings>
-    <add name="OracleConnectionString" connectionString="Data Source=ORCL;User ID=zs18;Password=ZS18;Unicode=True" providerName="System.Data.OracleClient"/>
+    <add name="OracleConnectionString" connectionString="Data Source=ORCL;User ID=ZS18;Password=ZS18;Unicode=True" providerName="System.Data.OracleClient"/>
     <add name="OledbConnectionString" connectionString="Provider=IhOLEDB.iHistorian.1;Data Source=192.168.18.3;Persist Security Info=True;User ID=administrator;Password = admin@12345;" providerName="System.Data.OleDb"/>
   </connectionStrings>
 
