--- a/MSYS.Web/app.config
+++ b/MSYS.Web/app.config
@@ -27,6 +27,10 @@
                 serializeAs="String">
                 <value>http://10.43.171.22:8081/xymis/services/StoreService</value>
             </setting>
+            <setting name="MSYS_Web_PlanService_WsPlanForGSInterfaceService"
+                serializeAs="String">
+                <value>http://10.43.171.22:8081/xymis/services/planForGSService</value>
+            </setting>
         </MSYS.Web.Properties.Settings>
     </applicationSettings>
 </configuration>
