--- a/MSYS.Web/app.config
+++ b/MSYS.Web/app.config
@@ -13,23 +13,23 @@
         <MSYS.Web.Properties.Settings>
             <setting name="MSYS_Web_MasterService_MisMasterDataServiceInterfaceService"
                 serializeAs="String">
-                <value>http://10.43.171.22:8081/xymis/services/MisMasterDataService</value>
+                <value>http://10.43.171.20/xymis/services/MisMasterDataService</value>
             </setting>
             <setting name="MSYS_Web_EquipService_EquipServiceInterfaceService"
                 serializeAs="String">
-                <value>http://10.43.171.22:8081/xymis/services/EquipService</value>
+                <value>http://10.43.171.20/xymis/services/EquipService</value>
             </setting>
             <setting name="MSYS_Web_MateriaService_WsBaseDataInterfaceService"
                 serializeAs="String">
-                <value>http://10.43.171.22:8081/xymis/services/baseDataService</value>
+                <value>http://10.43.171.20/xymis/services/baseDataService</value>
             </setting>
             <setting name="MSYS_Web_StoreService_StoreServiceInterfaceService"
                 serializeAs="String">
-                <value>http://10.43.171.22:8081/xymis/services/StoreService</value>
+                <value>http://10.43.171.20/xymis/services/StoreService</value>
             </setting>
             <setting name="MSYS_Web_PlanService_WsPlanForGSInterfaceService"
                 serializeAs="String">
-                <value>http://10.43.171.22:8081/xymis/services/planForGSService</value>
+                <value>http://10.43.171.20/xymis/services/planForGSService</value>
             </setting>
         </MSYS.Web.Properties.Settings>
     </applicationSettings>
