--- a/MSYS.Web/Properties/Settings.settings
+++ b/MSYS.Web/Properties/Settings.settings
@@ -3,19 +3,19 @@
   <Profiles />
   <Settings>
     <Setting Name="MSYS_Web_MasterService_MisMasterDataServiceInterfaceService" Type="(Web Service URL)" Scope="Application">
-      <Value Profile="(Default)">http://10.43.171.22:8081/xymis/services/MisMasterDataService</Value>
+      <Value Profile="(Default)">http://10.43.171.20/xymis/services/MisMasterDataService</Value>
     </Setting>
     <Setting Name="MSYS_Web_EquipService_EquipServiceInterfaceService" Type="(Web Service URL)" Scope="Application">
-      <Value Profile="(Default)">http://10.43.171.22:8081/xymis/services/EquipService</Value>
+      <Value Profile="(Default)">http://10.43.171.20/xymis/services/EquipService</Value>
     </Setting>
     <Setting Name="MSYS_Web_MateriaService_WsBaseDataInterfaceService" Type="(Web Service URL)" Scope="Application">
-      <Value Profile="(Default)">http://10.43.171.22:8081/xymis/services/baseDataService</Value>
+      <Value Profile="(Default)">http://10.43.171.20/xymis/services/baseDataService</Value>
     </Setting>
     <Setting Name="MSYS_Web_StoreService_StoreServiceInterfaceService" Type="(Web Service URL)" Scope="Application">
-      <Value Profile="(Default)">http://10.43.171.22:8081/xymis/services/StoreService</Value>
+      <Value Profile="(Default)">http://10.43.171.20/xymis/services/StoreService</Value>
     </Setting>
     <Setting Name="MSYS_Web_PlanService_WsPlanForGSInterfaceService" Type="(Web Service URL)" Scope="Application">
-      <Value Profile="(Default)">http://10.43.171.22:8081/xymis/services/planForGSService</Value>
+      <Value Profile="(Default)">http://10.43.171.20/xymis/services/planForGSService</Value>
     </Setting>
   </Settings>
 </SettingsFile>
